--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# lock file
+package-lock.json
+yarn.lock
+
 # Editor directories and files
 .idea
 .vscode
